--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.16",
     "classnames": "^2.3.2",
     "eslint-plugin-prettier": "^4.2.1",
+    "lightweight-charts": "^4.0.1",
     "moment": "^2.29.4",
     "next": "^12.3.1",
     "react": "^18.2.0",
