--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-plugin-prettier": "^4.2.1",
     "lightweight-charts": "^4.0.1",
